--- a/bolin/c_ofa77/css/style.css
+++ b/bolin/c_ofa77/css/style.css
@@ -224,8 +224,77 @@ body {
   }
 }
 
+.fixed_line_btn {
+  position: fixed;
+  right: 40px;
+  bottom: 135px;
+  z-index: 200;
+}
+
+.fixed_line_btn:hover {
+  opacity: .9;
+}
+
+.fixed_line_btn img {
+  -webkit-filter: drop-shadow(0 0 2px #ffffff);
+          filter: drop-shadow(0 0 2px #ffffff);
+  display: block;
+}
+
+#gotop {
+  position: fixed;
+  z-index: 90;
+  right: 0;
+  bottom: 35px;
+  width: 65px;
+  cursor: pointer;
+}
+
+.back_top img {
+  border: none;
+  width: 35px;
+  display: block;
+  -webkit-filter: drop-shadow(0 0 2px #ffffff);
+          filter: drop-shadow(0 0 2px #ffffff);
+}
+
+.cm_service {
+  z-index: 991;
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  right: 10px;
+  bottom: 80px;
+  opacity: 1;
+  background-color: #c49a3e;
+  -webkit-box-shadow: 0px 0px 5px 2px #bbb;
+  box-shadow: 0px 0px 5px 2px #bbb;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.cm_service img {
+  width: 40px;
+  height: 40px;
+}
+
+.cm_service:hover {
+  opacity: .9;
+}
+
 .header_container {
   width: 100%;
+  min-width: 1000px;
   position: fixed;
   top: 0;
   left: 0;
@@ -551,6 +620,7 @@ a.header_logo span {
 
 .main_container {
   width: 100%;
+  min-width: 1000px;
   margin: 0 auto;
   min-height: calc(100vh - 178px);
   padding-top: 80px;
@@ -632,68 +702,16 @@ a.header_logo span {
   }
 }
 
-.main_container .fixed_line_btn {
-  position: fixed;
-  right: 40px;
-  bottom: 135px;
-  z-index: 200;
-}
-
-.main_container .fixed_line_btn img {
-  -webkit-filter: drop-shadow(0 0 2px #ffffff);
-          filter: drop-shadow(0 0 2px #ffffff);
-  display: block;
-}
-
-.main_container #gotop {
-  position: fixed;
-  z-index: 90;
-  right: 0;
-  bottom: 35px;
-  width: 65px;
-  cursor: pointer;
-}
-
-.main_container .back_top img {
-  border: none;
-  width: 35px;
-  display: block;
-  -webkit-filter: drop-shadow(0 0 2px #ffffff);
-          filter: drop-shadow(0 0 2px #ffffff);
-}
-
-.main_container .cm_service {
-  z-index: 991;
-  position: fixed;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  right: 10px;
-  bottom: 80px;
-  opacity: 1;
-  background-color: #c49a3e;
-  -webkit-box-shadow: 0px 0px 5px 2px #bbb;
-  box-shadow: 0px 0px 5px 2px #bbb;
-  -webkit-transition: opacity 0.3s ease-in-out;
-  transition: opacity 0.3s ease-in-out;
-}
-
-.main_container .cm_service img {
-  width: 40px;
-  height: 40px;
-}
-
-.main_container .main_banner {
+.main_container .main_flexslider {
   width: 100%;
+}
+
+.main_container .main_flexslider .swiper-container {
+  padding-bottom: 40px;
+}
+
+.main_container .main_flexslider .swiper-pagination-bullet {
+  background-color: #1482f9;
 }
 
 .main_container .skeleton-placeholder {
@@ -797,6 +815,7 @@ a.header_logo span {
   height: auto;
   background-color: #1482f9;
   padding-top: 4rem;
+  min-width: 1000px;
 }
 
 .footer_container .block {
@@ -846,5 +865,447 @@ a.header_logo span {
 
 .footer_container .other_infor_link a:hover {
   text-decoration: underline;
+}
+
+.mob-app {
+  display: none;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  background: -webkit-gradient(linear, left top, left bottom, from(#abe5fb), color-stop(30%, #fff));
+  background: linear-gradient(#abe5fb, #fff 30%);
+}
+
+.mob-app .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 5px 8px;
+  width: 100%;
+}
+
+.mob-app .header .logo {
+  width: 80px;
+  display: block;
+}
+
+.mob-app .header .logo img {
+  -webkit-filter: drop-shadow(1px 0.5px 0 rgba(0, 0, 0, 0.8));
+          filter: drop-shadow(1px 0.5px 0 rgba(0, 0, 0, 0.8));
+  max-width: 100%;
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.mob-app .header .member-box {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.mob-app .header .member-box p, .mob-app .header .member-box span {
+  width: auto;
+  font-size: .75rem;
+  color: #858585;
+  padding-right: 5px;
+}
+
+.mob-app .header .member-box .id-cover {
+  border-radius: 5px;
+  padding: 3px 5px;
+  margin-left: 10px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#00adfd), color-stop(#1482f9), to(#2b51f4));
+  background: linear-gradient(180deg, #00adfd, #1482f9, #2b51f4);
+}
+
+.mob-app .header .member-box .id-cover span {
+  font-size: .875rem;
+  font-weight: 700;
+  color: #fff;
+  padding: 3px;
+  display: block;
+}
+
+.mob-app .main_flexslider .swiper-pagination {
+  display: none;
+}
+
+.layout_main {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.mob_container {
+  overflow: hidden;
+  background-color: #fff;
+  height: calc(100vh - 260px);
+}
+
+.marquee-cover {
+  overflow-x: visible;
+  padding: 2px 14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #dcdcdc;
+  border-radius: 0 0 20px 20px;
+}
+
+.marquee-cover .title {
+  font-size: 1rem;
+  color: #2264f6;
+  width: auto;
+  padding-right: 10px;
+}
+
+.marquee-cover .marqee {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  overflow: hidden;
+  width: calc(100% - 50px);
+  height: 2rem;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@keyframes scroll {
+  from {
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+  }
+  to {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+}
+
+.marquee-cover .marqee ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-animation: scroll 20s linear infinite;
+          animation: scroll 20s linear infinite;
+}
+
+.marquee-cover .marqee ul li {
+  font-size: 0.9rem;
+  padding: 0 10px;
+  line-height: 30px;
+  color: #858585;
+  display: block;
+  word-break: keep-all;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  float: left;
+  margin-right: 30px;
+}
+
+.game-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  overflow: hidden;
+  padding-top: 7px;
+  height: 100%;
+}
+
+.game-box .btn-list {
+  padding: 0 0 0 10px;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  overflow-y: auto;
+}
+
+.game-box .btn-list li {
+  background: #efefef;
+  -webkit-box-shadow: inset 0 -4px 0 0 #cccaca;
+          box-shadow: inset 0 -4px 0 0 #cccaca;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  min-height: 70px;
+  border-radius: 15px;
+  padding: 0 10px;
+  margin-bottom: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.game-box .btn-list li span {
+  font-size: 1rem;
+  font-weight: Regular;
+  color: #979191;
+}
+
+.game-box .btn-list li img {
+  max-width: 45px;
+  max-height: 45px px;
+  opacity: .4;
+  -webkit-filter: grayscale(1);
+          filter: grayscale(1);
+}
+
+.game-box .btn-list li.active {
+  background: #02a7fc;
+  background: linear-gradient(-45deg, #3ac1f5 50%, #02a7fc 0);
+  -webkit-box-shadow: inset 0 -4px 0 0 #1175a9;
+          box-shadow: inset 0 -4px 0 0 #1175a9;
+}
+
+.game-box .btn-list li.active span {
+  color: #fff;
+}
+
+.game-box .btn-list li.active img {
+  opacity: 1;
+  filter: none;
+  -webkit-filter: none;
+}
+
+.game-box .list-cover {
+  position: relative;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  height: 100%;
+  overflow-y: auto;
+}
+
+.game-box .list-cover .game-list {
+  padding: 0 12px;
+  width: 100%;
+  display: none;
+}
+
+.game-box .list-cover .game-list li {
+  margin: 0 0 7px;
+}
+
+.game-box .list-cover .game-list li a {
+  border-radius: 15px;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  height: 100%;
+  width: 100%;
+  -webkit-box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.2);
+}
+
+.game-box .list-cover .game-list li a img {
+  max-width: 100%;
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.game-box .list-cover .game-list li a .txt {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+.game-box .list-cover .game-list li a .txt .name {
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+
+.game-box .list-cover .game-list.open {
+  display: block;
+}
+
+.footer-mob {
+  display: none;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+}
+
+.footer-mob .footer-nav {
+  background: #fff;
+  width: 100%;
+  min-height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.16);
+          box-shadow: 0 3px 10px rgba(0, 0, 0, 0.16);
+}
+
+.footer-mob .footer-nav li {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  text-align: center;
+}
+
+.footer-mob .footer-nav li > a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 55px;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 1;
+  margin: auto;
+  padding-top: 5px;
+  display: block;
+}
+
+.footer-mob .footer-nav li > a p {
+  font-size: .75rem;
+  font-weight: 400;
+  color: #9e9e9e;
+  padding: 0 0 10px;
+}
+
+.footer-mob .footer-nav li > a img {
+  max-width: 25px;
+  max-height: 25px;
+  width: auto;
+  filter: brightness(0) opacity(0.5);
+  -webkit-filter: brightness(0) opacity(0.5);
+}
+
+.footer-mob .footer-nav li.active > a img {
+  -webkit-filter: grayscale(0);
+          filter: grayscale(0);
+}
+
+@media (min-width: 968px) {
+  .mob-app,
+  .footer-mob {
+    display: none;
+  }
+}
+
+@media (max-width: 968px) {
+  .mob-app,
+  .footer-mob {
+    display: block;
+  }
+  .header_container,
+  .main_container,
+  .footer_container {
+    display: none;
+  }
 }
 /*# sourceMappingURL=style.css.map */
