--- a/bolin/c_ofa77/css/style.css
+++ b/bolin/c_ofa77/css/style.css
@@ -1311,6 +1311,404 @@ a.header_logo span {
           filter: grayscale(0);
 }
 
+.modal-dialog {
+  max-width: 500px;
+  margin: 1.75rem auto;
+}
+
+.go-login .mfp-close {
+  display: none;
+}
+
+.modal-content {
+  width: 75%;
+  position: relative;
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  pointer-events: auto;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  outline: 0;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+.modal-content .modal-body {
+  position: relative;
+  -ms-flex: 1 1 auto;
+  -webkit-box-flex: 1;
+          flex: 1 1 auto;
+}
+
+.modal-content .modal-body .modal-01 {
+  font-size: 2rem;
+  text-align: center;
+  font-weight: 700;
+  color: #fff;
+  background-color: #1482f9;
+  padding: 6px;
+}
+
+@media (max-width: 668px) {
+  .modal-content .modal-body .modal-01 {
+    font-size: 1.3125rem;
+    font-weight: 500;
+    padding: 10px 0;
+  }
+}
+
+.modal-content .modal-body .modal-02 {
+  font-size: 1rem;
+  text-align: center;
+  font-weight: 700;
+  color: #1482f9;
+  padding: 15px;
+}
+
+@media (max-width: 668px) {
+  .modal-content .modal-body .modal-02 {
+    font-weight: normal;
+    padding: 25px 15px;
+  }
+}
+
+.modal-content .close {
+  cursor: pointer;
+  padding: 10px 20px;
+  margin: auto;
+  border-radius: 5px;
+  font-weight: 700;
+  color: #fff;
+  background: #1482f9;
+  -webkit-box-shadow: 1px 2px 5px #1482f9;
+          box-shadow: 1px 2px 5px #1482f9;
+  margin: 0 auto 20px;
+  font-size: 1.2rem;
+}
+
+@media (max-width: 668px) {
+  .modal-content {
+    width: 90%;
+  }
+  .modal-content .close {
+    font-size: 0.9rem;
+    font-weight: normal;
+  }
+}
+
+.login_container {
+  width: 100vw;
+  height: 100vh;
+  overflow: auto !important;
+  background: url(../images/register.jpg) top no-repeat #212121;
+}
+
+.login_container .fillin_content {
+  margin: 30px auto 0;
+  max-width: 476px;
+  text-align: center;
+  height: auto;
+}
+
+.login_container .fillin_content .top_logo {
+  margin: 30px auto;
+  position: relative;
+  z-index: 1;
+}
+
+.login_container .fillin_content .top_logo img {
+  width: 60%;
+  max-width: 304px;
+  margin: 0 auto;
+  -webkit-filter: drop-shadow(3px 2px 0 black);
+          filter: drop-shadow(3px 2px 0 black);
+}
+
+.login_container .fillin_content h3.main_title {
+  width: 100%;
+  height: 69px;
+  line-height: 69px;
+  text-align: center;
+  font-size: 30px;
+  color: #fff;
+  z-index: 1;
+  position: relative;
+}
+
+.login_container .fillin_content h3.main_title .mob-show {
+  display: none;
+}
+
+.login_container .fillin_content ul.fillinBox {
+  width: 100%;
+  max-width: 304px;
+  margin: 0 auto;
+  height: auto;
+  list-style: none;
+}
+
+.login_container .fillin_content ul.fillinBox li {
+  position: relative;
+  width: 100%;
+  height: auto;
+  margin-bottom: 16px;
+}
+
+.login_container .fillin_content ul.fillinBox li:first-child {
+  margin-top: 20px;
+}
+
+.login_container .fillin_content ul.fillinBox li input.fillin_text {
+  display: block;
+  width: 100%;
+  height: 48px;
+  border: none;
+  color: #999;
+  font-size: 14px;
+  text-indent: 40px;
+  outline: none;
+}
+
+.login_container .fillin_content ul.fillinBox li .icon {
+  display: block;
+  width: 40px;
+  height: 48px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 200;
+}
+
+.login_container .fillin_content ul.fillinBox li .icon_a {
+  background: #fff url(../images/icon_phone.png) no-repeat 13px 14px;
+}
+
+.login_container .fillin_content ul.fillinBox li .icon_b {
+  background: #fff url(../images/icon_2.png) no-repeat 13px 14px;
+}
+
+.login_container .fillin_content ul.fillinBox li .icon_c {
+  background: #fff url(../images/icon_1.png) no-repeat 13px 14px;
+}
+
+.login_container .fillin_content ul.fillinBox li .icon_d {
+  background: #fff url(../images/icon_clock.png) no-repeat 13px 14px;
+}
+
+.login_container .fillin_content ul.fillinBox li.verification {
+  text-align: right;
+  color: #b4c2ce;
+  padding-bottom: 10px;
+}
+
+.login_container .fillin_content ul.fillinBox li.verification span {
+  cursor: pointer;
+}
+
+.login_container .fillin_content ul.fillinBox li .agree {
+  height: 20px;
+  line-height: 20px;
+  white-space: nowrap;
+  text-align: left;
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.5) !important;
+}
+
+.login_container .fillin_content ul.fillinBox li .agree input.consentCheck {
+  margin: 7px 5px 0 0;
+}
+
+.login_container .fillin_content ul.fillinBox li .agree i {
+  font-style: italic;
+}
+
+.login_container .fillin_content ul.fillinBox li .agree a {
+  color: #1482f9;
+}
+
+.login_container .fillin_content ul.fillinBox li button.btn-style {
+  text-align: center;
+  height: 48px;
+  line-height: 48px;
+  font-size: 14px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#00adfd), color-stop(#1482f9), to(#2b51f4));
+  background: linear-gradient(180deg, #00adfd, #1482f9, #2b51f4);
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  -webkit-transition: all .6s;
+  transition: all .6s;
+}
+
+.login_container .fillin_content ul.fillinBox li p.login {
+  display: block;
+  width: 100%;
+  cursor: pointer;
+}
+
+.login_container .fillin_content ul.fillinBox li p.login span {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 14px;
+}
+
+.login_container .fillin_content ul.fillinBox li p.login a {
+  color: #1482f9;
+}
+
+.login_container .fillin_content ul.fillinBox li.register {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 48px;
+  line-height: 48px;
+  margin: 13px 0;
+  overflow: hidden;
+}
+
+.login_container .fillin_content ul.fillinBox li.register a {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.login_container .fillin_content ul.fillinBox li.register a:last-child {
+  color: #1482f9;
+  cursor: pointer;
+  right: 0;
+  position: absolute;
+}
+
+@media (max-width: 968px) {
+  .login_container .fillin_content {
+    position: relative;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    padding: 0 20px 20px;
+    width: 80%;
+  }
+  .login_container .fillin_content .top_logo {
+    display: none;
+  }
+  .login_container .fillin_content h3.main_title {
+    position: relative;
+    background: url(../images/title.png) top no-repeat;
+    padding: 13px 15px;
+    word-break: keep-all;
+    line-height: initial;
+    font-size: 20px;
+  }
+  .login_container .fillin_content h3.main_title a {
+    color: #fff;
+  }
+  .login_container .fillin_content h3.main_title .mob-show {
+    display: block;
+  }
+  .login_container .fillin_content h3.main_title .pc {
+    display: none;
+  }
+  .login_container .fillin_content input.fillin_text {
+    padding: 5px 10px;
+    height: 40px !important;
+    margin-bottom: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+    color: #000 !important;
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 10px;
+  }
+  .login_container .fillin_content input.fillin_text::-webkit-input-placeholder {
+    color: #000 !important;
+  }
+  .login_container .fillin_content input.fillin_text:-ms-input-placeholder {
+    color: #000 !important;
+  }
+  .login_container .fillin_content input.fillin_text::-ms-input-placeholder {
+    color: #000 !important;
+  }
+  .login_container .fillin_content input.fillin_text::placeholder {
+    color: #000 !important;
+  }
+  .login_container .fillin_content ul.fillinBox .mob-hide {
+    display: none;
+  }
+  .login_container .fillin_content ul.fillinBox li .icon {
+    height: 40px;
+  }
+  .login_container .fillin_content ul.fillinBox li .icon_a {
+    background: url(../images/new_icon_password.png) no-repeat 13px 9px;
+    background-size: 50%;
+    -webkit-filter: brightness(0);
+            filter: brightness(0);
+  }
+  .login_container .fillin_content ul.fillinBox li .icon_b {
+    background: url(../images/new_icon_code.png) no-repeat 13px 9px;
+    background-size: 50%;
+    -webkit-filter: brightness(0);
+            filter: brightness(0);
+  }
+  .login_container .fillin_content ul.fillinBox li .icon_c {
+    background: url(../images/new_icon_name.png) no-repeat 13px 9px;
+    background-size: 50%;
+    -webkit-filter: brightness(0);
+            filter: brightness(0);
+  }
+  .login_container .fillin_content ul.fillinBox li .icon_d {
+    background: url(../images/new_icon_password.png) no-repeat 13px 9px;
+    background-size: 50%;
+    -webkit-filter: brightness(0);
+            filter: brightness(0);
+  }
+  .login_container .fillin_content ul.fillinBox li button.btn-style {
+    opacity: 0.6;
+    line-height: 40px;
+    height: 40px;
+    border-radius: 5px;
+  }
+  .login_container .fillin_content ul.fillinBox li.verification {
+    padding-bottom: 0;
+  }
+  .login_container .fillin_content ul.fillinBox li.verification span {
+    font-size: .8125rem;
+    font-weight: normal;
+    background: #848484;
+    padding: 5px 10px;
+    margin-left: 10px;
+    border-radius: 5px;
+    word-break: keep-all;
+    color: #333;
+    background: -webkit-gradient(linear, left top, right top, from(#06cdbd), to(#0aa1e0));
+    background: linear-gradient(90deg, #06cdbd, #0aa1e0);
+  }
+  .login_container .fillin_content ul.fillinBox li.verification img {
+    display: none;
+  }
+  .login_container .fillin_content ul.fillinBox li .agree {
+    font-size: 12px;
+  }
+  .login_container .fillin_content ul.fillinBox li .agree i {
+    font-style: inherit;
+    font-weight: normal;
+  }
+  .login_container .fillin_content ul.fillinBox li.register a:last-child {
+    display: none;
+  }
+}
+
 @media (min-width: 968px) {
   .mob-app,
   .footer-mob {
