--- a/bolin/539/html/css/style.css
+++ b/bolin/539/html/css/style.css
@@ -228,6 +228,7 @@ body {
   width: 100%;
   max-width: 1000px;
   margin: 0 auto;
+  padding: 0 20px;
 }
 
 .header_container {
@@ -308,8 +309,11 @@ body {
   padding: 15px;
 }
 
-.main_container .top_banner .banner-01 {
+.main_container .top_banner .banner {
   width: 100%;
+}
+
+.main_container .top_banner .bn-01 {
   height: 178px;
   background-color: #000000;
   border-radius: 70px;
@@ -325,6 +329,132 @@ body {
   color: #fff;
 }
 
+.main_container .inside-bn {
+  height: initial;
+  background-color: #FFE1ED;
+  background-image: none;
+}
+
+.main_container .inside-bn .banner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main_container .inside-bn .banner .img_box {
+  -webkit-box-flex: 45%;
+      -ms-flex: 45%;
+          flex: 45%;
+}
+
+.main_container .inside-bn .banner .infoBox {
+  -webkit-box-flex: 55%;
+      -ms-flex: 55%;
+          flex: 55%;
+  text-align: center;
+}
+
+.main_container .inside-bn .banner .infoBox .main_title {
+  color: #333333;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.main_container .inside-bn .banner .infoBox .sub_title {
+  color: #6937B4;
+  font-size: 20px;
+  padding: 15px 0;
+  font-weight: bold;
+}
+
+.main_container .inside-bn .banner .infoBox .text_p {
+  padding: 15px 20px;
+  font-size: 16px;
+  line-height: 30px;
+  color: #707070;
+}
+
+.main_container .inside-bn .banner .infoBox ul.nb {
+  border-radius: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 20px;
+  vertical-align: middle;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  /* FF3.6-15 */
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(45deg, #d3124c 0%, #7db9e8 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d3124c', endColorstr='#7db9e8',GradientType=1 );
+  /* IE6-9 fallback on horizontal gradient */
+}
+
+.main_container .inside-bn .banner .infoBox ul.nb li {
+  display: inline-block;
+  margin: 5px;
+  width: 55px;
+  height: 55px;
+  border-radius: 55px;
+  background-color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
+  background: white;
+  /* Old browsers */
+  /* FF3.6-15 */
+  /* Chrome10-25,Safari5.1-6 */
+  background: radial-gradient(ellipse at center, white 0%, #eaeaea 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#eaeaea',GradientType=1 );
+}
+
+.main_container .inside-bn .banner .infoBox ul.nb li.bg-c-y {
+  background: white;
+  /* Old browsers */
+  /* FF3.6-15 */
+  /* Chrome10-25,Safari5.1-6 */
+  background: radial-gradient(ellipse at center, white 0%, #fff250 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fff250',GradientType=1 );
+  /* IE6-9 fallback on horizontal gradient */
+}
+
+.main_container .inside-bn .banner .infoBox ul.nb li p {
+  color: #000000;
+  font-size: 28px;
+  font-weight: bold;
+  padding-bottom: 3px;
+}
+
+@media (max-width: 450px) {
+  .main_container .inside-bn .banner .img_box, .main_container .inside-bn .banner .infoBox {
+    -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+            flex: 100%;
+  }
+}
+
 .main_container ul.a_box {
   width: 100%;
   display: -webkit-box;
@@ -336,10 +466,18 @@ body {
 }
 
 .main_container ul.a_box li {
+  width: 100%;
   margin: 15px;
   -webkit-box-flex: calc(50% - 30px);
       -ms-flex: calc(50% - 30px);
           flex: calc(50% - 30px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main_container ul.a_box li a {
+  width: 100%;
   background-color: #fff;
   -webkit-box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
@@ -356,6 +494,18 @@ body {
       -ms-flex-align: center;
           align-items: center;
   min-height: 200px;
+  -webkit-transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.main_container ul.a_box li a:hover {
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
+  opacity: .9;
+  -webkit-box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 5px 5px 12px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 5px 5px 12px 0 rgba(0, 0, 0, 0.2);
 }
 
 .main_container ul.a_box .bg-c-01 .info_title {
@@ -613,6 +763,145 @@ body {
         -ms-flex: 100%;
             flex: 100%;
     border-radius: 0 0 6px 6px;
+  }
+}
+
+.main_container .c_infoBox {
+  width: 100%;
+  padding: 40px 0;
+  border-bottom: 1px solid #E1E1E1;
+}
+
+.main_container .c_infoBox .top_title {
+  font-weight: bold;
+  line-height: 32px;
+  font-size: 26px;
+  border-radius: 5px;
+  letter-spacing: 2px;
+  padding: 15px;
+  text-align: center;
+  color: #fff;
+  background: #bc3d74;
+}
+
+.main_container .c_infoBox .imgBox {
+  width: 100%;
+  padding: 20px 0;
+}
+
+.main_container .c_infoBox .imgBox img {
+  width: 100%;
+}
+
+.main_container .c_infoBox .title {
+  padding: 25px 0 15px 0;
+  font-size: 26px;
+  color: #6937B4;
+  font-weight: bold;
+}
+
+@media (max-width: 500px) {
+  .main_container .c_infoBox .title {
+    font-size: 22px;
+  }
+}
+
+.main_container .c_infoBox h3.subtitle {
+  padding: 15px 0;
+  font-size: 18px;
+  color: #004d9e;
+  font-weight: bold;
+}
+
+.main_container .c_infoBox a.btn {
+  display: inline-block;
+  border-radius: 10px;
+  padding: 10px;
+  border: 1px solid #6937B4;
+}
+
+.main_container .c_infoBox a.btn:hover {
+  color: #fff;
+  background-color: #6937B4;
+}
+
+.main_container .c_infoBox p.text {
+  font-size: 16px;
+  line-height: 26px;
+  color: #333;
+}
+
+.main_container .c_infoBox ul {
+  padding-left: 20px;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.main_container .c_infoBox .list_disc {
+  list-style-type: disc;
+}
+
+.main_container .c_infoBox .list_nb {
+  list-style-type: decimal;
+}
+
+@media (max-width: 500px) {
+  .main_container .c_infoBox .top_title {
+    line-height: 28px;
+    font-size: 22px;
+  }
+}
+
+.main_container .table_style {
+  padding: 20px 0;
+}
+
+.main_container .table_style table {
+  border: 1px solid #e4e4e4;
+  width: 100%;
+  background-color: #fff;
+}
+
+.main_container .table_style table a {
+  color: #6937B4;
+  text-decoration: underline;
+}
+
+.main_container .table_style table a:hover {
+  text-decoration: none;
+}
+
+.main_container .table_style table .table_title {
+  background-color: #edd4d4;
+}
+
+.main_container .table_style table .text_center {
+  text-align: center;
+}
+
+.main_container .table_style table th, .main_container .table_style table td {
+  padding: 12px;
+  border: 1px solid #e4e4e4;
+  border-width: 0 1px 1px 0;
+  vertical-align: middle;
+}
+
+@media (max-width: 500px) {
+  .main_container .table_style table th, .main_container .table_style table td {
+    padding: 6px;
+  }
+}
+
+.main_container .table_style table th.bg_title {
+  font-size: 20px;
+  font-weight: bold;
+  border: 2px solid #f2cbcb;
+  border-width: 2px;
+}
+
+@media (max-width: 500px) {
+  .main_container .table_style table th.bg_title {
+    font-size: 16px;
   }
 }
 
