--- a/bolin/539/html/css/style.scss
+++ b/bolin/539/html/css/style.scss
@@ -24,6 +24,7 @@
   width: 100%;
   max-width: 1000px;
   margin: 0 auto;
+  padding: 0 20px;
 }
 // header
 .header_container {
@@ -91,8 +92,10 @@
     -webkit-justify-content: center;
     justify-content: center;
     padding: 15px;
-    .banner-01{
+    .banner{
       width:100% ;
+    }
+    .bn-01{
       height: 178px;
       background-color: #000000;
       border-radius: 70px;
@@ -105,22 +108,119 @@
       color: #fff;
     }
   }
+  .inside-bn{
+    height: initial;
+    background-color: #FFE1ED;
+    background-image: none;
+    .banner{
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      .img_box {
+        flex: 45%;
+      }
+      .infoBox {
+        flex: 55%;
+        text-align: center;
+        .main_title{
+          color: #333333;
+          font-size: 40px;
+          font-weight: bold;
+        }
+        .sub_title{
+          color: #6937B4;
+          font-size: 20px;
+          padding: 15px 0;
+          font-weight: bold;
+        }
+        .text_p{
+          padding:15px 20px;
+          font-size: 16px;
+          line-height: 30px;
+          color: #707070;
+        }
+        ul.nb{
+          border-radius: 50px;
+          display: flex;
+          flex-wrap: wrap;
+          padding: 20px;
+          vertical-align: middle;
+          align-items: center;
+          justify-content:center;
+          background: -moz-linear-gradient(45deg,  rgba(211,18,76,1) 0%, rgba(125,185,232,1) 100%); /* FF3.6-15 */
+          background: -webkit-linear-gradient(45deg,  rgba(211,18,76,1) 0%,rgba(125,185,232,1) 100%); /* Chrome10-25,Safari5.1-6 */
+          background: linear-gradient(45deg,  rgba(211,18,76,1) 0%,rgba(125,185,232,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d3124c', endColorstr='#7db9e8',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+          li{
+            display: inline-block;
+            margin: 5px;
+            width: 55px;
+            height: 55px;
+            border-radius: 55px;
+            background-color: #fff;
+            display: -webkit-flex;
+            display: flex;
+            -webkit-align-items: center;
+            align-items: center;
+            -webkit-justify-content: center;
+            justify-content: center;
+            box-shadow: 0 2px 8px 0 rgba(0, 0, 0, .2);
+            background: rgb(255,255,255); /* Old browsers */
+            background: -moz-radial-gradient(center, ellipse cover,  rgba(255,255,255,1) 0%, rgba(234,234,234,1) 100%); /* FF3.6-15 */
+            background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,255,255,1) 0%,rgba(234,234,234,1) 100%); /* Chrome10-25,Safari5.1-6 */
+            background: radial-gradient(ellipse at center,  rgba(255,255,255,1) 0%,rgba(234,234,234,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#eaeaea',GradientType=1 );
+            &.bg-c-y{
+              background: rgb(255,255,255); /* Old browsers */
+              background: -moz-radial-gradient(center, ellipse cover,  rgba(255,255,255,1) 0%, rgba(255,242,80,1) 100%); /* FF3.6-15 */
+              background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,255,255,1) 0%,rgba(255,242,80,1) 100%); /* Chrome10-25,Safari5.1-6 */
+              background: radial-gradient(ellipse at center,  rgba(255,255,255,1) 0%,rgba(255,242,80,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+              filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fff250',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+            }            
+            p{
+              color: #000000;
+              font-size: 28px;
+              font-weight: bold;
+              padding-bottom: 3px;
+            }
+          }
+        }
+      }
+      @media (max-width: 450px) {
+        .img_box,.infoBox {
+          flex: 100%;
+        }
+      }
+    }
+  }
   ul.a_box{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     padding: 30px 15px;
     li{
+      width: 100%;
       margin:15px;
       flex:calc(50% - 30px) ;
-      background-color: #fff;
-      box-shadow: 0 2px 8px 0 rgba(0, 0, 0, .2);
-      border-radius: 6px;
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-      min-height: 200px;
+      a{
+        width: 100%; 
+        background-color: #fff;
+        box-shadow: 0 2px 8px 0 rgba(0, 0, 0, .2);
+        border-radius: 6px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        min-height: 200px;
+        transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+        transform: scale(1);
+        &:hover{
+          transform: scale(0.95);
+          opacity: .9;
+          box-shadow: 0 2px 8px 0 rgba(0, 0, 0, .2), 5px 5px 12px 0 rgba(0, 0, 0, .2);       
+        }
+      }
     }
     .bg-c-01{
       .info_title {
@@ -347,6 +447,115 @@
         .info_box{
           flex: 100%; 
           border-radius: 0 0 6px 6px;
+        }
+      }
+    }
+  }
+  .c_infoBox{
+    width: 100%;
+    padding:40px 0;
+    border-bottom: 1px solid #E1E1E1;
+    .top_title{
+      font-weight: bold;
+      line-height: 32px;
+      font-size: 26px;
+      border-radius: 5px;
+      letter-spacing: 2px;
+      padding: 15px;
+      text-align: center;
+      color: #fff;
+      background: #bc3d74;
+    }
+    .imgBox{
+      width: 100%;
+      padding: 20px 0;
+      img{
+        width: 100%;
+      }
+    }
+    .title{
+      padding:25px 0 15px 0;
+      font-size: 26px;
+      color: #6937B4;
+      font-weight: bold;
+      @media (max-width:500px) {
+        font-size: 22px;
+      }
+    }
+    h3.subtitle{
+      padding: 15px 0;
+      font-size: 18px;
+      color: #004d9e;
+      font-weight: bold;
+    }
+    a.btn{
+      display: inline-block;
+      border-radius: 10px;
+      padding: 10px;
+      border: 1px solid #6937B4;
+      &:hover{
+        color: #fff;
+        background-color: #6937B4;
+      }
+    }
+    p.text{
+      font-size: 16px;
+      line-height: 26px;
+      color: #333;
+    }
+    ul{
+      padding-left: 20px;
+      font-size: 16px;
+      line-height: 22px;
+    }
+    .list_disc{
+      list-style-type: disc;
+    }
+    .list_nb{
+      list-style-type: decimal;
+    }
+    @media (max-width:500px) {
+      .top_title {
+        line-height: 28px;
+        font-size: 22px;
+      }
+    }
+  }
+  .table_style{
+    padding: 20px 0;
+    table{
+      a{
+        color: #6937B4;
+        text-decoration: underline;
+        &:hover{
+          text-decoration: none;
+        }
+      }
+      border:1px solid #e4e4e4;
+      width: 100%;
+      background-color: #fff;
+      .table_title{
+        background-color: #edd4d4;
+      }
+      .text_center{
+        text-align: center;
+      }
+      th,td{
+        padding: 12px;
+        border: 1px solid #e4e4e4;
+        border-width: 0 1px 1px 0;
+        vertical-align: middle;
+        @media (max-width:500px) {
+          padding: 6px;
+        }
+      }
+      th.bg_title{
+        font-size: 20px;
+        font-weight: bold;
+        border: 2px solid #f2cbcb;
+        border-width: 2px;
+        @media (max-width:500px) {
+          font-size: 16px;
         }
       }
     }
